--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@capacitor/core": "^6.2.1",
     "@capacitor/device": "^6.0.2",
     "@capacitor/ios": "^6.2.1",
+    "@capacitor/keyboard": "^6.0.3",
     "@capacitor/local-notifications": "^6.0.0",
     "@capacitor/network": "^6.0.0",
     "@capacitor/preferences": "^6.0.0",
